Prevent overscoll on Multiselect popup list.

--- a/server/static/wrstat/src/multiSelect.css
+++ b/server/static/wrstat/src/multiSelect.css
@@ -52,6 +52,7 @@
 .multiSelect>div>div ul {
 	max-height: 20em;
 	overflow-y: scroll;
+	overscroll-behavior: contain;
 	border-width: 0 1px 1px 1px;
 	border-style: solid;
 	border-color: currentColor;
