Move DiskTree colour key to be more visible.

--- a/server/static/wrstat/src/diskTree.css
+++ b/server/static/wrstat/src/diskTree.css
@@ -32,6 +32,7 @@
 #details {
 	border-radius: 0 0 8px 8px;
 	padding: 1em 0.5em;
+	margin-bottom: 1em;
 	max-width: 100vw;
 	color: var(--diskTreeDetailsFont);
 	background-color: var(--diskTreeDetailsBG);
@@ -68,7 +69,7 @@
 	align-items: start;
 }
 
-#disktree .treeFilter {
+#disktree div:first-child {
 	grid-column: 2;
 	grid-row: 2;
 	margin-right: 2em;
@@ -135,7 +136,18 @@
 
 #treeKey span {
 	background-color: #007DC1;
+	color: #fff;
 	padding: 5px;
 	border-radius: 8px;
 	margin-right: 0.5em;
+	display: block;
+	float: left;
+}
+
+#treeKey {
+	border-spacing: 0;
+}
+
+#treeKey td {
+	padding: 1em;
 }
