--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -44,6 +44,7 @@ details {
   border: 1px solid var(--subtleBorder);
   border-radius: 8px;
   margin: 1em;
+  min-width: 940px;
 }
 
 details summary {
