Clone Owner, BOM, Group, Usage filters into DiskTree filters.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -1,6 +1,7 @@
 @import url("auth.css");
 @import url("diskTree.css");
 @import url("filter.css");
+@import url("groupUserFilter.css");
 @import url("history.css");
 @import url("minmax.css");
 @import url("multiSelect.css");
