Remove margin from bottom of usage table.

--- a/server/static/wrstat/src/usageTable.css
+++ b/server/static/wrstat/src/usageTable.css
@@ -1,7 +1,7 @@
 #usageTable {
 	table-layout: fixed;
 	width: calc(100% - 2em);
-	margin: 4em 1em 1em 1em;
+	margin: 4em 1em 0 1em;
 	overflow: hidden;
 	border-width: 0;
 }
