--- a/server/static/wrstat/src/minmax.css
+++ b/server/static/wrstat/src/minmax.css
@@ -1,7 +1,7 @@
 .minmax {
 	position: relative;
 	display: block;
-	margin: 0 1em;
+	margin: 0.25em 1em 0 1em;
 	height: calc(1em + 4px + 1em + 1px);
 	grid-column: 2 / span 3;
 }
@@ -17,8 +17,8 @@
 
 .minmax_min,
 .minmax_max {
-	padding: 2px;
-	margin-top: -6px;
+	padding: 1px 2px;
+	margin-top: -4px;
 	background-color: var(--minmaxStaticBG);
 	color: var(--minmaxStaticFont);
 }
@@ -54,8 +54,8 @@
 
 .minmax_minValue,
 .minmax_maxValue {
-	padding: 2px;
-	margin-top: -6px;
+	padding: 1px 2px;
+	margin-top: -4px;
 	border-radius: 3px;
 }
 
