--- a/server/static/wrstat/src/diskTree.css
+++ b/server/static/wrstat/src/diskTree.css
@@ -1,10 +1,15 @@
+details #treeBreadcrumbs {
+	margin: 0;
+	width: calc(100% - 4em);
+}
+
 #treeBreadcrumbs {
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 1em 0 0 0;
 	grid-row: 1;
 	grid-column: 1 / span 2;
-	width: calc(100% - 4em);
+	width: calc(100% - 2em);
 }
 
 #treeBreadcrumbs li {
@@ -70,10 +75,13 @@
 	align-items: start;
 }
 
+details #disktree>div:first-child {
+	margin-right: 2em;
+}
+
 #disktree>div:first-child {
 	grid-column: 2;
 	grid-row: 2;
-	margin-right: 2em;
 }
 
 #disktree .treeFilter .title {
