Adjust position of text elements and icons within rectangles + remove hover colour change for unenterable directories.

--- a/server/static/wrstat/src/treeMap.css
+++ b/server/static/wrstat/src/treeMap.css
@@ -39,6 +39,10 @@ rect+use+text {
 	fill-opacity: 0.75;
 }
 
-.treeMap rect.box:hover {
+.treeMap rect.box:not(.hasClick):hover {
+	cursor: not-allowed;
+}
+
+.treeMap rect.hasClick:hover {
 	fill-opacity: 0.8;
 }
