--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -37,6 +37,7 @@
 @import url("table.css");
 @import url("tabs.css");
 @import url("treeMap.css");
+@import url("treeTable.css");
 @import url("usageTable.css");
 
 body {
