hsw-31: Add list view to Disktree to see directories which are too small in the default view (#57)
* Sort treeTable cols and format time ago nicer.

* Improved look of buttons by reverting them to browser default across the app, improved look of breadcrumbs

* Added hover functionality to table component

* Sort treeTable cols and format time ago nicer.

* Install ESLint, delint

---------

Co-authored-by: Sendu Bala <sb10@sanger.ac.uk>

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -37,6 +37,7 @@
 @import url("table.css");
 @import url("tabs.css");
 @import url("treeMap.css");
+@import url("treeTable.css");
 @import url("usageTable.css");
 
 body {
@@ -167,6 +168,10 @@ th,
 .multiSelect,
 .minmax {
   user-select: none;
+}
+
+button {
+	cursor: pointer;
 }
 
 @media (prefers-color-scheme: light) {
